# TinyGL

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  build-all.sh  build-clang.sh  build-devkitpro-a64.sh  build-devkitpro-arm.sh  build-djgpp-i586.sh  build-gcc.sh  build-generic.sh  build-haiku-i586.sh  build-haiku-x86_64.sh  build-mingw-i686.sh  build-mingw-x86_64.sh  build-riscv64-linux-gnu.sh  build-tcc.sh  build-watcom-dos.sh  build-watcom-linux.sh  build-watcom-os2.sh  build-watcom-windows.sh  build-watcom.sh  build.sh  clean.sh
cmake/: TinyGL.pc.in  devkitpro-a64.cmake  devkitpro-arm.cmake  djgpp-i586.cmake  haiku-i586.cmake  haiku-x86_64.cmake  install.cmake  mingw-i686.cmake  mingw-x86_64.cmake  riscv64-linux-gnu.cmake  tinygl.pc.in
examples/: bounce.c  cube.c  gears.c  gears_gba.c  gears_gba.mak  gears_headless.h  makefile  mech.c  morph3d.c  spin.c  teapot.c  teapot.h  texobj.c  ui.c  ui.h  ui_headless.c  ui_sdl2.c  ui_sdl3.c
include/GL/: gl.h  glu.h  ostinygl.h
misc/: TinyGL.pc
source/: api.c  arrays.c  fixed_point_math.h  glfixed.h  glu.c  init.c  list.c  makefile  matrix.c  misc.c  msghandling.c  opinfo.h  ostinygl.c  zbuffer.c  zbuffer.h  zclut.c  zclut.h  zgl.h
tests/: gears.c  zclut_test.c
